# myNerfstudio

./: .gitignore  README.md  clearup.py
myproject/: pyproject.toml
myproject/extensions/chamferdist/chamferdist/: chamfer.py
myproject/myproject/: cimle_config.py  cimle_datamanager.py  cimle_pipeline.py  cimle_pixel_samplers.py  cimle_trainer.py  sparse_scannet_config.py  sparse_scannet_dataparser.py  vanilla_cimle_nerf.py  vanilla_cimle_nerf_field.py
myproject/myproject/configs/: cimle_config.py  data_config.py  sparse_scannet_config.py
myproject/myproject/data/: cimle_pixel_samplers.py
myproject/myproject/data/datamanagers/: cimle_datamanager.py
myproject/myproject/data/dataparsers/: llff_dataparser.py  sparse_scannet_dataparser.py
myproject/myproject/data/datasets/: cimle_dataset.py
myproject/myproject/engines/trainers/: cimle_trainer.py
myproject/myproject/fields/: cimle_density_fields.py  cimle_field.py  cimle_nerfacto_field.py  stochastic_nerfacto_field.py  vanilla_cimle_nerf_field.py
myproject/myproject/model_components/: losses.py
myproject/myproject/model_coponents/: distribution_metrics.py
myproject/myproject/models/: base_cimle_model.py  cimle_nerfacto.py  cimle_nerfacto_.py  nerfacto.py  stochastic_nerfacto.py  vanilla_cimle_nerf.py
myproject/myproject/pipelines/: cimle_pipeline.py
myproject/myproject/utils/: myutils.py
nerfstudio/cameras/: rays.py
nerfstudio/configs/: base_config.py  method_configs.py
nerfstudio/data/: pixel_samplers.py  scene_box.py
nerfstudio/engine/: callbacks.py  optimizers.py  (+2 more)
project_linear/: pyproject.toml
project_linear/linear/configs/: linear_config.py
project_linear/linear/model_components/: ray_samplers.py  renderers.py
project_linear/linear/models/: linear_mipnerf.py  linear_nerfacto.py  linear_vanilla_nerf.py
scripts/: exp1.sh
(+30 files in other folders)
